--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.4-1200-jdbc41</version>
+			<version>42.2.1</version>
+			<!--<version>9.4-1200-jdbc41</version>-->
 		</dependency>
 		<dependency>
             <groupId>javax</groupId>
