--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <!--<scope>provided</scope> -->
         </dependency>
         <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>6.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-processing</artifactId>
             <version>2.17</version>
